<resources>
    <string name="app_name">Mapsecond</string>
    <string name="title_activity_maps">Map</string>
    <string name="maps">maps</string>
    <string name="home">home</string>
    <string name="pin">pin</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_second">Password(for certification)</string>

    <string name="question_register">Click here if you have not registered</string>
    <string name="registerInstruction">Please input your new email, username and password.</string>


    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="bt_cancel">Cancel</string>
    <string name="bt_contribution">Contribution</string>
    <string name="tv_comment">Comment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
